<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">LivrExpress</string>
    <string name="action_settings">Settings</string>

    <string name="btnParse">Récupérer la tournée</string>
    <string name="btnBarcode">Code Barre Check</string>
    <string name="btnBonLivraison">Bon Livraison</string>
    <string name="app_name" >LivrExpress</string>
    <string name="action_settings" >Settings</string>
    <string name="apikey">AIzaSyBAIWUPl6-4iuxQTilGUoAFU7fBIu_-Ad8</string>
    <string name="scan_activity">Scanner</string>
    <string name="non_remise_activity">NonRemise</string>
    <string name="confirmer">Confirmer</string>
    <string name="motif">Motif :</string>
    <string name="expediteur">Expediteur :</string>
    <string name="destinataire">Destinataire :</string>
    <string name="nb_paquet">Nombre de paquet :</string>
    <string name="poid">Poid :</string>
    <string name="scanner">Scanner</string>

    <string name="capture_name">QR Code Capture</string>
    <string name="decoder_name">QR Code Decoder</string>
    <string name="bon_livraison_name">Bon de Livraison</string>

    <string name="msg_default_format">Format</string>
    <string name="msg_default_meta">Metadonnée</string>
    <string name="msg_default_status">Placer un code barre dans le rectangle pour le scanner.</string>
    <string name="msg_default_time">Date</string>
    <string name="msg_default_type">Type</string>

    <string name="result_address_book">Contact trouvée</string>
    <string name="result_calendar">Evenement trouvé</string>
    <string name="result_email_address">Adresse email trouvée</string>
    <string name="result_geo">Coordonnées géographique trouvées</string>
    <string name="result_isbn">Livre trouvé</string>
    <string name="result_product">Produit trouvé</string>
    <string name="result_sms">Adresse SMS trouvée</string>
    <string name="result_tel">Numéro de téléphone trouvé</string>
    <string name="result_text">Texte trouvé</string>
    <string name="result_uri">Url trouvé</string>
    <string name="result_wifi">Configuration WLAN trouvée</string>

    <string name="wifi_ssid_label">Nom du réseau</string>
    <string name="wifi_type_label">Type</string>

    <string name="barcode_image">Barcode Image</string>
    <string name="nbColis">Nombre de colis restant :</string>
    <string name="btnMap">btnMap</string>
    <string name="apiKey">AIzaSyBAIWUPl6-4iuxQTilGUoAFU7fBIu_-Ad8</string><string name="accueil">accueil</string><string name="titre">titre</string>
    <string name="url_fichier_xml">http://www.webosoft.info/exia/Export_ERP.xml</string>

    <string name="commentaires">Commentaires :</string>
    <string name="signature">Signature :</string>
    <string name="etat">Etat de la livraison :</string>

    <string name="apiKey">AIzaSyBAIWUPl6-4iuxQTilGUoAFU7fBIu_-Ad8</string>
</resources>